--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <label class="label is-small label-err" id="amount-status"></label>
                         </div>
                         <div class="column">
-                            <button id="open" class="button is-info">
+                            <button id="InvestmentBtn" class="button is-info">
                                 Next
                             </button>
                         </div>
@@ -57,11 +57,11 @@
                     <div class="columns">
                         <div class="column">
                             <input class="input" id="address" type="text" placeholder="Your address" autocomplete="off"
-                                value="AFVAFTQHJ47TDGEEP4J7ATQ7DD3B2ABX">
+                                value="">
                             <label class="label is-small label-err" id="address-status"></label>
                         </div>
                         <div class="column">
-                            <button id="search" class="button is-info">
+                            <button id="searchAssetsBtn" class="button is-info">
                                 Search
                             </button>
                         </div>
